--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-       var a=20
-        console.log(a)
-        var b=56
-        var b=36
-        console.log(b)
-        console.log(a+b)
-        console.log(a-b)
-        let c=78
-        const d=3.14
-        console.log(c+d)
-        document.write(a+d)
+    var a =[23,56,12,45]
+    console.log(typeof[0])
+    console.log(a[3]+a[1])
+     var b = a.slice(0,2)
+     console.log(b)
+     var c={
+        
+     }
     </script>
 </head>
 <body>
