--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-    var a =[23,56,12,45]
-    console.log(typeof[0])
-    console.log(a[3]+a[1])
-     var b = a.slice(0,2)
-     console.log(b)
-     var c={
-        
-     }
+    // var a =[23,56,12,45]
+    // console.log(typeof[0])
+    // console.log(a[3]+a[1])
+    //  var b = a.slice(0,2)
+    //  console.log(b)
+    //  var c={
+    //     name : "john",
+    //       age :78,
+    //       empid : 345
+    //  }
+    //  console.log(c.name,c.age,c.empid)
+    //ES5
+    //declaration
+    function add(){
+        //scope
+       let a= prompt("enter the name ")
+       let b= prompt("Enter your age")
+       document.write(a,b)
+    }
+    add()//invocation
+    
     </script>
 </head>
 <body>
