--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     // let b = Number(prompt("enter b"))
     //  const add = ()=>alert(a+b)
     //  add()
+   
     const url="./assets/pic.jpg"
     const demo=()=>{
         console.log(url)
@@ -61,6 +62,7 @@
     </script>
 </head>
 <body id="changecolor">
+    <a href="about.html">about</a>
     <p id="text">hello word</p>
     <button onclick="demo()"> change click</button>
     <button onclick="buttoncolor()">dark mode</button>
